fixed footer and text sizes

--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
       </div>
     </main>
     <footer>
-      <p>&copy; <span id="date"></span> - Brenleigh Killpack - United States</p>
-      <img src="./home-page/images/us-flag.png" alt="US Flag" />
-      <p id="lastModified"></p>
+      <section id="footerCopyRight">
+        <p>&copy; <span id="date"></span> - Brenleigh Killpack - United States</p>
+      </section>
+      <section id="footerDate">
+        <p>Last Modification: <span id="lastModified"></span></p>
+      </section>
     </footer>
     <script src="./home-page/scripts/getDates.js"></script>
   </body>
