section change to div

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </div>
     </main>
     <footer>
-      <section id="footerCopyRight">
+      <div id="footerCopyRight">
         <p>&copy; <span id="date"></span> - Brenleigh Killpack - United States</p>
-      </section>
-      <section id="footerDate">
+      </div>
+      <div id="footerDate">
         <p>Last Modification: <span id="lastModified"></span></p>
-      </section>
+      </div>
     </footer>
     <script src="./home-page/scripts/getDates.js"></script>
   </body>
