html validation fixes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta name="author" content="Brenleigh Killpack"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="./home-page/styles/base.css"/>
     <link rel="stylesheet" href="./home-page/styles/larger.css"/>
   </head>
@@ -32,7 +31,7 @@
     <main>
       <h2>WDD 230: Web Frontend Development</h2>
       <div class="container">
-        <section id="learning" class="card">
+        <section class="card">
           <h3>Learning Activities</h3>
           <ul>
             <li>
@@ -48,7 +47,7 @@
             <li>Week 06:</li>
           </ul>
         </section>
-        <section id="info" class="card">
+        <section class="card">
           <h3>Information</h3>
           <p>Rexburg, Idaho</p>
           <p>Weather</p>
