last modified fixed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-      <img src="./home-page/images/profile-pic.png" alt="My Pic"/>
+      <img src="./home-page/images/home-page-pic.png" alt="My Pic"/>
       <h1>Brenleigh Killpack</h1>
     </header>
     <nav>
@@ -60,7 +60,7 @@
         <p>&copy; <span id="date"></span> - Brenleigh Killpack - United States</p>
       </div>
       <div id="footerDate">
-        <p>Last Modification: <span id="lastModified"></span></p>
+        <p>Last Modified: <span id="last-modified"></span></p>
       </div>
     </footer>
     <script src="./home-page/scripts/getDates.js"></script>
