--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -7,32 +7,35 @@
     <meta name="description" content="Site plan for IF Chamber of Commerce">
     <meta name="author content="Brenleigh Killpack">
     <link rel="stylesheet" href="./styles/chamber-site-plan.css">
+    <link rel="stylesheet" href="./styles/chamber-site-big.css">
 </head>
 <body>
     <header>
         <h1>Site Plan - Idaho Falls Chamber of Commerce</h1>
     </header>
     <main>
-        <section id="site-name" class="card">
-            <h3>Site Name</h3>
-            <p>Idaho Falls Chamber of Commerce. This name represents where the chamber operates.</p>
-        </section>
-        <section id="site-purpose" class="card">
-            <h3>Site Purpose</h3>
-            <p>The Idaho Falls Chamber of Commerce seeks to empower the community and surrounding 
-            region through community and economic development. We promote business by sharing
-            information about our community and events, as well as providing special services to
-            our members.</p>
-        </section>
-        <section id="scenarios" class="card">
-            <h3>Scenarios</h3>
-            <ul>
-                <li>How can I get in contact with chamber representatives?</li>
-                <li>What are the benefits of becoming a member?</li>
-                <li>What events is the chamber hosting this month to promote the community and
-                local businesses?</li>
-            </ul>
-        </section>
+        <div id="container">
+            <section  id="name" class="card">
+                <h3>Site Name</h3>
+                <p>Idaho Falls Chamber of Commerce. This name represents where the chamber operates.</p>
+            </section>
+            <section id="purpose" class="card">
+                <h3>Site Purpose</h3>
+                <p>The Idaho Falls Chamber of Commerce seeks to empower the community and surrounding 
+                region through community and economic development. We promote business by sharing
+                information about our community and events, as well as providing special services to
+                our members.</p>
+            </section>
+            <section id="scenarios" class="card">
+                <h3>Scenarios</h3>
+                <ul>
+                    <li>How can I get in contact with chamber representatives?</li>
+                    <li>What are the benefits of becoming a member?</li>
+                    <li>What events is the chamber hosting this month to promote the community and
+                    local businesses?</li>
+                </ul>
+            </section>
+        </div>
         <div id="color-title">
             <h2>Color Scheme</h2>
         </div>
