--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
               Week 01:
               <a href="./week01/holygrail.html">Layout</a><span> | </span>
               <a href="./week01/media-query.html">Media Query</a><span> | </span>
-              <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a>
+              <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a><span> | </span>
+              <a href="./week01/chamber-site-plan.html">Chamber Site Plan</a>
             </li>
             <li>Week 02:</li>
             <li>Week 03:</li>
