--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber Site Plan</title>
     <meta name="description" content="Site plan for IF Chamber of Commerce">
-    <meta name="author content="Brenleigh Killpack">
+    <meta name="author" content="Brenleigh Killpack">
     <link rel="stylesheet" href="./styles/chamber-site-plan.css">
     <link rel="stylesheet" href="./styles/chamber-site-big.css">
 </head>
@@ -39,13 +39,13 @@
         <div id="color-title">
             <h2>Color Scheme</h2>
         </div>
-        <section id="color-scheme">
+        <div id="color-scheme">
             <div id="blue"></div> 
             <div id="white"></div> 
             <div id="yellow"></div> 
             <div id="red"></div> 
             <div id="black"></div>
-        </section>
+        </div>
         <div class="red-title">
             <h2>Typography</h2>
         </div>
