--- a/index.html
+++ b/index.html
@@ -35,17 +35,18 @@
           <h3>Learning Activities</h3>
           <ul>
             <li>
-              Week 01:
+              Lesson 01:
               <a href="./week01/holygrail.html">Layout</a><span> | </span>
               <a href="./week01/media-query.html">Media Query</a><span> | </span>
               <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a><span> | </span>
               <a href="./week01/chamber-site-plan.html">Chamber Site Plan</a>
             </li>
-            <li>Week 02:</li>
-            <li>Week 03:</li>
-            <li>Week 04:</li>
-            <li>Week 05:</li>
-            <li>Week 06:</li>
+            <li>Lesson 02:</li>
+            <li>Lesson 03:</li>
+            <li>Lesson 04:</li>
+            <li>Lesson 05:</li>
+            <li>Lesson 06:</li>
+            <li>Lesson 07:</li>
           </ul>
         </section>
         <section class="card">
