--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
               <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a><span> | </span>
               <a href="./week01/chamber-site-plan.html">Chamber Site Plan</a>
             </li>
-            <li>Lesson 02:</li>
+            <li>Lesson 02:
+              <a href="./week02/design.html">Design</a>
+            </li>
             <li>Lesson 03:</li>
             <li>Lesson 04:</li>
             <li>Lesson 05:</li>
