change site plan link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="">Chamber</a></li>
-        <li><a href="">Site Plan</a></li>
+        <li><a href="/week01/chamber-site-plan.html">Site Plan</a></li>
         <li><a href="">Form</a></li>
       </ul>
     </nav>
@@ -38,8 +38,7 @@
               Lesson 01:
               <a href="./week01/holygrail.html">Layout</a><span> | </span>
               <a href="./week01/media-query.html">Media Query</a><span> | </span>
-              <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a><span> | </span>
-              <a href="./week01/chamber-site-plan.html">Chamber Site Plan</a>
+              <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a>
             </li>
             <li>Lesson 02:
               <a href="./week02/design.html">Design</a>
