--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
               <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a>
             </li>
             <li>Lesson 02:
-              <a href="./week02/design.html">Design</a>
+              <a href="./week02/design.html">Design Principles</a><span> | </span>
+              <a href="./week02/bom.html">DOM Manipulation</a>
             </li>
             <li>Lesson 03:</li>
             <li>Lesson 04:</li>
