--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brenleigh Killpack - WDD 230 - Web Frontend Development</title>
     <meta
       name="description"
       content="Brenleigh Killpack WDD 230 course assignment portal"
     />
-    <meta name="author" content="Brenleigh Killpack"/>
+    <meta name="author" content="Brenleigh Killpack" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100&display=swap"
-      rel="stylesheet"/>
-    <link rel="stylesheet" href="./home-page/styles/base.css"/>
-    <link rel="stylesheet" href="./home-page/styles/larger.css"/>
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./home-page/styles/base.css" />
+    <link rel="stylesheet" href="./home-page/styles/larger.css" />
   </head>
   <body>
     <header>
-      <img src="./home-page/images/home-page-pic.png" alt="My Pic"/>
+      <img src="./home-page/images/home-page-pic.png" alt="My Pic" />
       <h1>Brenleigh Killpack</h1>
     </header>
     <nav>
@@ -37,11 +38,13 @@
             <li>
               Lesson 01:
               <a href="./week01/holygrail.html">Layout</a><span> | </span>
-              <a href="./week01/media-query.html">Media Query</a><span> | </span>
+              <a href="./week01/media-query.html">Media Query</a
+              ><span> | </span>
               <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a>
             </li>
-            <li>Lesson 02:
-              <a href="./week02/design.html">Design Principles</a><span> | </span>
+            <li>
+              Lesson 02: <a href="./week02/design.html">Design Principles</a
+              ><span> | </span>
               <a href="./week02/bom.html">DOM Manipulation</a>
             </li>
             <li>Lesson 03:</li>
@@ -61,7 +64,9 @@
     </main>
     <footer>
       <div id="footerCopyRight">
-        <p>&copy; <span id="date"></span> - Brenleigh Killpack - United States</p>
+        <p>
+          &copy; <span id="date"></span> - Brenleigh Killpack - United States
+        </p>
       </div>
       <div id="footerDate">
         <p>Last Modified: <span id="last-modified"></span></p>
