--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
             </li>
             <li>
               Lesson 02: <a href="./week02/design.html">Design Principles</a
+              ><span> | </span> <a href="./week02/bom.html">DOM Manipulation</a
               ><span> | </span>
-              <a href="./week02/bom.html">DOM Manipulation</a>
+              <a href="https://codepen.io/bkill16/pen/vYvrxXz"
+                >Responsive Navigation</a
+              >
             </li>
             <li>Lesson 03:</li>
             <li>Lesson 04:</li>
