--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="./home-page/styles/base.css" />
     <link rel="stylesheet" href="./home-page/styles/larger.css" />
-    <link rel="icone" href="favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <header>
