--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brenleigh Killpack - WDD 230 - Web Frontend Development</title>
     <meta
-      name="description"
-      content="Brenleigh Killpack WDD 230 course assignment portal"
+      property="og:title"
+      content="Brenleigh Killpack - WDD 230 - Web Frontend Development"
     />
-    <meta name="author" content="Brenleigh Killpack" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://images.squarespace-cdn.com/content/v1/591f55e39f74565ba4db26d8/149617843
+      0380-4JV9F16G3MKV4RSTZMVH/Spud+Day--Parade0068.jpeg"
+    />
+    <meta property="og:url" content="https://bkill16.github.io/wdd230/" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100&display
+      =swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./home-page/styles/base.css" />
