social media meta

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://images.squarespace-cdn.com/content/v1/591f55e39f74565ba4db26d8/149617843
-      0380-4JV9F16G3MKV4RSTZMVH/Spud+Day--Parade0068.jpeg"
+      content="https://images.squarespace-cdn.com/content/v1/591f55e39f74565ba4db26d8/1496178430380-4JV9F16G3MKV4RSTZMVH/Spud+Day--Parade0068.jpeg"
     />
     <meta property="og:url" content="https://bkill16.github.io/wdd230/" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100&display
-      =swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./home-page/styles/base.css" />
