--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./home-page/styles/normalize.css" />
     <link rel="stylesheet" href="./home-page/styles/base.css" />
     <link rel="stylesheet" href="./home-page/styles/larger.css" />
     <link rel="icon" href="favicon.ico" />
