--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <li>
               Lesson 01:
               <a href="./week01/holygrail.html">Layout</a><span> | </span>
-              <a href="./week01/media-query.html">Media Query</a
+              <a href="./week01/media-query.html">Media Queries</a
               ><span> | </span>
-              <a href="https://codepen.io/bkill16/pen/YzdxzmQ">JS Pen</a>
+              <a href="https://codepen.io/bkill16/pen/YzdxzmQ">Applied JavaScript</a>
             </li>
             <li>
               Lesson 02: <a href="./week02/design.html">Design Principles</a
