--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li>
               Lesson 01:
               <a href="./week01/holygrail.html">Layout</a><span> | </span>
-              <a href="./week01/media-query.html">Media Queries</a
+              <a href="./week01/media-query.html">Media Query</a
               ><span> | </span>
               <a href="https://codepen.io/bkill16/pen/YzdxzmQ">Applied JavaScript</a>
             </li>
