--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <h1>Brenleigh Killpack</h1>
     </header>
     <nav>
-      <ul>
+      <button id="menu"></button>
+      <ul class="navigation">
         <li><a href="./index.html">Home</a></li>
         <li><a href="">Chamber</a></li>
         <li><a href="./week01/chamber-site-plan.html">Site Plan</a></li>
@@ -47,7 +48,9 @@
               <a href="./week01/holygrail.html">Layout</a><span> | </span>
               <a href="./week01/media-query.html">Media Query</a
               ><span> | </span>
-              <a href="https://codepen.io/bkill16/pen/YzdxzmQ">Applied JavaScript</a>
+              <a href="https://codepen.io/bkill16/pen/YzdxzmQ"
+                >Applied JavaScript</a
+              >
             </li>
             <li>
               Lesson 02: <a href="./week02/design.html">Design Principles</a
@@ -82,6 +85,7 @@
         <p>Last Modified: <span id="last-modified"></span></p>
       </div>
     </footer>
+    <script src="./home-page/scripts/hamMenu.js"></script>
     <script src="./home-page/scripts/getDates.js"></script>
   </body>
 </html>
