--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <p>Last Modified: <span id="last-modified"></span></p>
       </div>
     </footer>
+    <script src="./home-page/scripts/darkMode.js"></script>
     <script src="./home-page/scripts/hamMenu.js"></script>
     <script src="./home-page/scripts/getDates.js"></script>
   </body>
