--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li>Lesson 07:</li>
           </ul>
         </section>
-        <section class="card">
+        <section class="card" id="information">
           <h3>Information</h3>
           <p>Rexburg, Idaho</p>
           <p>Weather</p>
