--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <header>
       <img src="./home-page/images/home-page-pic.png" alt="My Pic" />
       <h1>Brenleigh Killpack</h1>
+      <div id="mode">
+        ☑️
+      </div>
     </header>
     <nav>
       <button id="menu"></button>
