--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brenleigh Killpack - WDD 230 - Web Frontend Development</title>
+    <meta name="description" content="WDD 230 Course Portal">
+    <meta name="author" content="Brenleigh Killpack">
     <meta
       property="og:title"
       content="Brenleigh Killpack - WDD 230 - Web Frontend Development"
