--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brenleigh Killpack - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="WDD 230 Course Portal">
-    <meta name="author" content="Brenleigh Killpack">
+    <meta name="description" content="WDD 230 Course Portal" />
+    <meta name="author" content="Brenleigh Killpack" />
     <meta
       property="og:title"
       content="Brenleigh Killpack - WDD 230 - Web Frontend Development"
@@ -29,9 +29,7 @@
     <header>
       <img src="./home-page/images/home-page-pic.png" alt="My Pic" />
       <h1>Brenleigh Killpack</h1>
-      <div id="mode">
-        ☑️
-      </div>
+      <div id="mode">☑️</div>
     </header>
     <nav>
       <button id="menu"></button>
