--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jackson Hole Chamber of Commerce | Home</title>
+    <meta name="description" content="Home page for the Jackson Hole Chamber of Commerce">
+    <meta name="author" content="Brenleigh Killpack">
+    <meta property="og:title" content="Jackson Hole Chamber of Commerce | Home">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg">
+    <meta property="og:url" content="https://bkill16.github.io/wdd230/chamber/index.html">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/larger.css">
+    <link rel="icon" href="./favicon.ico">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a href="./index.html">Home</a>
+                <a href="">Discover</a>
+                <a href="">Directory</a>
+                <a href="">Join</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
