--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <link rel="stylesheet" href="./home-page/styles/larger.css" />
     <link rel="icon" href="favicon.ico" />
   </head>
-  <body>
+  <body class="darkMode">
     <header>
       <img src="./home-page/images/home-page-pic.png" alt="My Pic" />
       <h1>Brenleigh Killpack</h1>
-      <div id="mode">☑️</div>
+      <button id="mode">Light/Dark Mode</button>
     </header>
     <nav>
       <button id="menu"></button>
