first commit home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,15 +16,36 @@
     <link rel="icon" href="./favicon.ico">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="./index.html">Home</a>
-                <a href="">Discover</a>
-                <a href="">Directory</a>
-                <a href="">Join</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <img id="logo" src="./images/logo-white.png" alt="Logo">
+        <nav>
+            <button id="menu"></button>
+            <ul class="navigation">
+                <li>
+                    <a href="./index.html">Home</a>
+                    <a href="">Discover</a>
+                    <a href="">Directory</a>
+                    <a href="">Join</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <img id="home-hero" src="./images/home-hero.png" alt="Grand Teton National Park">
+        <div id="home-banner">
+            <h1>Chamber of Commerce</h1>
+        </div>
+        <div id="weather-card">
+            <h3>Weather</h3>
+            <p>Weather Information</p>
+        </div>
+        <div id="join-info">
+            <p>Information that attempts to persuade people to become members.</p>
+        </div>
+        <div id="join-button">
+            <button>Join Now!</button>
+        </div>
+    </main>
+    <script src="./scripts/hamMenu.js"></script>
 </body>
 </html>
