--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber Site Plan</title>
-    <meta name="description" content="Site plan for IF Chamber of Commerce">
+    <meta name="description" content="Site plan for Jackson Chamber of Commerce">
     <meta name="author" content="Brenleigh Killpack">
     <link rel="stylesheet" href="./styles/chamber-site-plan.css">
     <link rel="stylesheet" href="./styles/chamber-site-big.css">
 </head>
 <body>
     <header>
-        <h1>Site Plan - Idaho Falls Chamber of Commerce</h1>
+        <h1>Site Plan - Jackson Hole Chamber of Commerce</h1>
     </header>
     <main>
         <div id="container">
             <section  id="name" class="card">
                 <h3>Site Name</h3>
-                <p>Idaho Falls Chamber of Commerce. This name represents where the chamber operates.</p>
+                <p>Jackson Hole Chamber of Commerce. This name represents where the chamber operates.</p>
             </section>
             <section id="purpose" class="card">
                 <h3>Site Purpose</h3>
-                <p>The Idaho Falls Chamber of Commerce seeks to empower the community and surrounding 
+                <p>The Jackson Hole Chamber of Commerce seeks to empower the community and surrounding 
                 region through community and economic development. We promote business by sharing
                 information about our community and events, as well as providing special services to
                 our members.</p>
@@ -40,11 +40,10 @@
             <h2>Color Scheme</h2>
         </div>
         <div id="color-scheme">
-            <div id="blue"></div> 
-            <div id="white"></div> 
-            <div id="yellow"></div> 
-            <div id="red"></div> 
-            <div id="black"></div>
+            <div id="green"></div> 
+            <div id="tan"></div> 
+            <div id="brown"></div> 
+            <div id="light-green"></div> 
         </div>
         <div class="red-title">
             <h2>Typography</h2>
