--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <main>
-        <img id="home-hero" src="./images/home-hero.png" alt="Grand Teton National Park">
+        <img id="home-hero" src="./images/home-hero2.png" alt="Grand Teton National Park">
         <div id="home-banner">
             <h1>Chamber of Commerce</h1>
         </div>
