--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,6 +45,24 @@
         <div id="join-button">
             <button>Join Now!</button>
         </div>
+        <div id="events-container">
+            <h1>Events</h1>
+            <section class="event-card">
+                <div class="img-placeholder"></div>
+                <h2>Event 1 Title</h2>
+                <p>Information about the event. Maybe learn more button that links to a different page?</p>
+            </section>
+            <section class="event-card">
+                <div class="img-placeholder"></div>
+                <h2>Event 2 Title</h2>
+                <p>Information about the event. Maybe learn more button that links to a different page?</p>
+            </section>
+            <section class="event-card">
+                <div class="img-placeholder"></div>
+                <h2>Event 3 Title</h2>
+                <p>Information about the event. Maybe learn more button that links to a different page?</p>
+            </section>
+        </div>
     </main>
     <script src="./scripts/hamMenu.js"></script>
 </body>
