--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,69 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jackson Hole Chamber of Commerce | Home</title>
-    <meta name="description" content="Home page for the Jackson Hole Chamber of Commerce">
-    <meta name="author" content="Brenleigh Killpack">
-    <meta property="og:title" content="Jackson Hole Chamber of Commerce | Home">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg">
-    <meta property="og:url" content="https://bkill16.github.io/wdd230/chamber/index.html">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/base.css">
-    <link rel="stylesheet" href="./styles/larger.css">
-    <link rel="icon" href="./favicon.ico">
-</head>
-<body>
+    <meta
+      name="description"
+      content="Home page for the Jackson Hole Chamber of Commerce"
+    />
+    <meta name="author" content="Brenleigh Killpack" />
+    <meta
+      property="og:title"
+      content="Jackson Hole Chamber of Commerce | Home"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://bkill16.github.io/wdd230/chamber/index.html"
+    />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/base.css" />
+    <link rel="stylesheet" href="./styles/larger.css" />
+    <link rel="icon" href="./favicon.ico" />
+  </head>
+  <body>
     <header>
-        <img id="logo" src="./images/logo-white.png" alt="Logo">
-        <nav>
-            <button id="menu"></button>
-            <ul class="navigation">
-                <li>
-                    <a href="./index.html">Home</a>
-                    <a href="">Discover</a>
-                    <a href="">Directory</a>
-                    <a href="">Join</a>
-                </li>
-            </ul>
-        </nav>
+      <img id="logo" src="./images/logo-white.png" alt="Logo" />
+      <nav>
+        <button id="menu"></button>
+        <ul class="navigation">
+          <li>
+            <a href="./index.html">Home</a>
+            <a href="">Discover</a>
+            <a href="">Directory</a>
+            <a href="">Join</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <img id="home-hero" src="./images/home-hero.png" alt="Grand Teton National Park">
-        <div id="home-banner">
-            <h1>Chamber of Commerce</h1>
+      <img
+        id="home-hero"
+        src="./images/home-hero.png"
+        alt="Grand Teton National Park"
+      />
+      <div id="home-banner">
+        <h1>Chamber of Commerce</h1>
+      </div>
+      <div id="weather-card">
+        <h3>Weather</h3>
+        <p>Weather Information</p>
+      </div>
+      <div id="join-info">
+        <p>Information that attempts to persuade people to become members.</p>
+      </div>
+      <div id="join-button">
+        <button>Join Now!</button>
+      </div>
+      <div id="events-container">
+        <h1>Events</h1>
+        <section class="home-card">
+          <div class="img-placeholder"></div>
+          <h2>Event 1 Title</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </section>
+        <section class="home-card">
+          <div class="img-placeholder"></div>
+          <h2>Event 2 Title</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </section>
+        <section class="home-card">
+          <div class="img-placeholder"></div>
+          <h2>Event 3 Title</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </section>
+      </div>
+      <div id="spotlights-container">
+        <h1>Spotlights</h1>
+        <section class="home-card">
+          <div class="img-placeholder"></div>
+          <h2>Business 1</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <button class="spotlight-button">View Business</button>
+        </section>
+        <section class="home-card">
+          <div class="img-placeholder"></div>
+          <h2>Business 2</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <button class="spotlight-button">View Business</button>
+        </section>
+        <section class="home-card">
+          <div class="img-placeholder"></div>
+          <h2>Business 3</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <button class="spotlight-button">View Business</button>
+        </section>
+      </div>
+      <footer>
+        <div id="footerContact">
+            <p>Jackson Hole Chamber of Commerce</p>
+            <p>Placeholder Address</p>
+            <p>Jackson, WY 83002</p>
+            <p>Phone: (123)456-7890</p>
         </div>
-        <div id="weather-card">
-            <h3>Weather</h3>
-            <p>Weather Information</p>
+        <div class="footerCopy">
+          <p>
+            &copy; <span id="date"></span> - Brenleigh Killpack - WDD 230
+          </p>
         </div>
-        <div id="join-info">
-            <p>Information that attempts to persuade people to become members.</p>
+        <div class="footerCopy">
+          <p>Last Modified: <span id="last-modified"></span></p>
         </div>
-        <div id="join-button">
-            <button>Join Now!</button>
-        </div>
-        <div id="events-container">
-            <h1>Events</h1>
-            <section class="event-card">
-                <div class="img-placeholder"></div>
-                <h2>Event 1 Title</h2>
-                <p>Information about the event. Maybe learn more button that links to a different page?</p>
-            </section>
-            <section class="event-card">
-                <div class="img-placeholder"></div>
-                <h2>Event 2 Title</h2>
-                <p>Information about the event. Maybe learn more button that links to a different page?</p>
-            </section>
-            <section class="event-card">
-                <div class="img-placeholder"></div>
-                <h2>Event 3 Title</h2>
-                <p>Information about the event. Maybe learn more button that links to a different page?</p>
-            </section>
-        </div>
+      </footer>
     </main>
     <script src="./scripts/hamMenu.js"></script>
-</body>
+    <script src="./scripts/getDate.js"></script>
+  </body>
 </html>
