home page rough draft

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,7 +63,7 @@
       </div>
       <div id="events-container">
         <h1>Events</h1>
-        <section class="home-card">
+        <section id="event1" class="home-card">
           <div class="img-placeholder"></div>
           <h2>Event 1 Title</h2>
           <p>
@@ -73,7 +73,7 @@
             aliquip ex ea commodo consequat.
           </p>
         </section>
-        <section class="home-card">
+        <section id="event2" class="home-card">
           <div class="img-placeholder"></div>
           <h2>Event 2 Title</h2>
           <p>
@@ -83,7 +83,7 @@
             aliquip ex ea commodo consequat.
           </p>
         </section>
-        <section class="home-card">
+        <section id="event3" class="home-card">
           <div class="img-placeholder"></div>
           <h2>Event 3 Title</h2>
           <p>
