--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="./styles/larger.css" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="/chamber/favicon.ico" />
   </head>
   <body>
     <header>
