--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
       property="og:title"
       content="Jackson Hole Chamber of Commerce | Home"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website" >
     <meta
       property="og:image"
       content="https://cdn4.picryl.com/photo/2016/01/01/one-of-four-large-arches-of-elk-antler-in-the-town-square-of-jackson-hole-wyoming-be953a-1024.jpg"
@@ -49,7 +49,7 @@
         alt="Grand Teton National Park"
       />
       <div id="home-banner">
-        <h1>Chamber of Commerce</h1>
+        <h1>Jackson Hole Chamber of Commerce</h1>
       </div>
       <div id="weather-card">
         <h3>Weather</h3>
