--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,7 +45,7 @@
     <main>
       <img
         id="home-hero"
-        src="./images/home-hero.png"
+        src="./images/home-hero-og.jpg"
         alt="Grand Teton National Park"
       />
       <div id="home-banner">
