--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brenleigh Killpack - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 Course Portal" />
@@ -10,7 +10,7 @@
       property="og:title"
       content="Brenleigh Killpack - WDD 230 - Web Frontend Development"
     />
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="https://images.squarespace-cdn.com/content/v1/591f55e39f74565ba4db26d8/1496178430380-4JV9F16G3MKV4RSTZMVH/Spud+Day--Parade0068.jpeg"
@@ -63,7 +63,9 @@
                 >Responsive Navigation</a
               >
             </li>
-            <li>Lesson 03:</li>
+            <li>
+              Lesson 03: <a href="./week03/images/landscape2.webp">WebP</a>
+            </li>
             <li>Lesson 04:</li>
             <li>Lesson 05:</li>
             <li>Lesson 06:</li>
