--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li>
               Lesson 03: <a href="./week03/images/landscape2.webp">WebP</a
               ><span> | </span>
-              <a href="/week03/lazy-loading.html">Lazy Loading</a>
+              <a href="./week03/lazy-loading.html">Lazy Loading</a>
             </li>
             <li>Lesson 04:</li>
             <li>Lesson 05:</li>
