--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <li>
               Lesson 03: <a href="./week03/images/landscape2.webp">WebP</a
               ><span> | </span>
-              <a href="./week03/lazy-loading.html">Lazy Loading</a>
+              <a href="./week03/lazy-loading.html">Lazy Loading</a
+              ><span> | </span
+              ><a href="./week03/responsive-images.html">Responsive Images</a>
             </li>
             <li>Lesson 04:</li>
             <li>Lesson 05:</li>
