--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
               ><span> | </span>
               <a href="./week03/lazy-loading.html">Lazy Loading</a
               ><span> | </span
-              ><a href="./week03/responsive-images.html">Responsive Images</a>
+              ><a href="./week03/responsive-images.html">Responsive Images</a
+              ><span> | </span
+              ><a href="./week03/local-storage.html">Local Storage</a>
             </li>
             <li>Lesson 04:</li>
             <li>Lesson 05:</li>
