--- a/week03/lazy-loading.html
+++ b/week03/lazy-loading.html
@@ -6,19 +6,19 @@
     <title>Lazy Loading</title>
     <meta name="description" content="Lazy loading learning activity">
     <meta name="author" content="Brenleigh Killpack">
-    <link rel="stylesheet" href="/week03/styles/lazy-base.css">
+    <link rel="stylesheet" href="./styles/lazy-base.css">
 </head>
 <body>
     <header>
         <h1>Lazy Loading Learning Activity</h1>
     </header>
     <main>
-        <img src="/week03/images/image1.webp" alt="" loading="lazy" width="400" height="600">
-        <img src="/week03/images/image2.webp" alt="" loading="lazy" width="400" height="600">
-        <img src="/week03/images/image3.webp" alt="" loading="lazy" width="400" height="600">
-        <img src="/week03/images/image4.webp" alt="" loading="lazy" width="400" height="600">
-        <img src="/week03/images/image5.webp" alt="" loading="lazy" width="400" height="600">
-        <img src="/week03/images/image6.webp" alt="" loading="lazy" width="400" height="600">
+        <img src="./images/image1.webp" alt="" loading="lazy" width="400" height="600">
+        <img src="./images/image2.webp" alt="" loading="lazy" width="400" height="600">
+        <img src="./images/image3.webp" alt="" loading="lazy" width="400" height="600">
+        <img src="./images/image4.webp" alt="" loading="lazy" width="400" height="600">
+        <img src="./images/image5.webp" alt="" loading="lazy" width="400" height="600">
+        <img src="./images/image6.webp" alt="" loading="lazy" width="400" height="600">
     </main>
     <footer>
         <div id="footerCopyRight">
