--- a/week03/local-storage.html
+++ b/week03/local-storage.html
@@ -6,7 +6,7 @@
     <title>Book of Mormon - Top 10</title>
     <meta name="description" content="DOM learning activity" />
     <meta name="author" content="Brenleigh Killpack" />
-    <link rel="stylesheet" href="/week03/styles/local-storage-base.css" />
+    <link rel="stylesheet" href="./styles/local-storage-base.css" />
   </head>
   <body>
     <h1>📖 Book of Mormon - Top 10</h1>
