--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           srcset="./home-page/images/home-page-me.webp"
           media="(max-width: 400px)"
           width="150"
-          height="200"
+          height="auto"
         />
         <img
           src="./home-page/images/home-page-me.webp"
           alt="Brenleigh's Pic"
           width="175"
-          height="225"
+          height="auto"
         />
       </picture>
       <h1>Brenleigh Killpack</h1>
@@ -58,12 +58,10 @@
         <source
           srcset="./home-page/images/hero-small.webp"
           media="(max-width: 500px)"
-          loading="lazy"
         />
         <source
           srcset="./home-page/images/hero-medium.webp"
           media="(max-width: 1000px)"
-          loading="lazy"
         />
         <img
           class="hero-img"
@@ -71,7 +69,6 @@
           alt="Idaho Falls Temple"
           width="1500"
           height="750"
-          loading="lazy"
         />
       </picture>
       <div id="hero-label">
