logo and nav fixes

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,10 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="./images/logo-white.png" alt="Logo" />
+      <picture>
+        <source srcset="./images/logo-test.webp" media="(max-width: 500px)" width="200px">
+        <img id="logo" src="./images/logo-test.webp" alt="Logo" width="375px" /> 
+      </picture>
       <nav>
         <button id="menu"></button>
         <ul class="navigation">
