--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,9 +50,7 @@
         <source  id="home-hero" srcset="./images/home-hero-small.webp" media="(max-width: 500px)" width="500px" height="500px">
         <img id="home-hero" src="./images/home-hero-large.webp" alt="Grand Tetons" width="1280px" height="">
       </picture>
-      <div id="home-banner">
-        <h1>Jackson Hole Chamber of Commerce</h1>
-      </div>
+      <h1 id="home-title">Jackson Hole Chamber of Commerce</h1>
       <div id="weather-card">
         <h3>Weather</h3>
         <p>Weather Information</p>
